# vmchooser

./: AUTHORS  Makefile.am  Makefile.in  README.md  configure  configure.ac
src/: Makefile.am  Makefile.in  vmchooser.c  vmchooser.conf  vmchooser.h  vmchooser.ui
src/rpm/: vmchooser.spec
